--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
 j2ee.server.home=C:/Users/Tanguy/Desktop/D\u00e9veloppement/apache-tomcat-7.0.107
 j2ee.server.instance=tomcat70:home=C:\\Users\\Tanguy\\Desktop\\D\u00e9veloppement\\apache-tomcat-7.0.107
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
