--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,6 +30,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.jandex-2.0.0.Final.jar=C:\\Users\\Tanguy\\Desktop\\D\u00e9veloppement\\Libs - Api\\jandex-2.0.0.Final.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Tanguy\\Desktop\\D\u00e9veloppement\\Libs - Api\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\Tanguy\\Desktop\\D\u00e9veloppement\\Libs - Api\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,13 +44,18 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jandex-2.0.0.Final.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -67,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
