--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
-j2ee.server.home=C:/Users/Tanguy/Desktop/D\u00e9veloppement/apache-tomcat-7.0.107
-j2ee.server.instance=tomcat70:home=C:\\Users\\Tanguy\\Desktop\\D\u00e9veloppement\\apache-tomcat-7.0.107
+deploy.ant.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2rc\\tomcat80.properties
+file.reference.jandex-2.0.0.Final.jar=C:\\Users\\Tanguy\\Documents\\libs
+file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Tanguy\\Documents\\libs
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\Tanguy\\Documents\\libs
+j2ee.server.domain=C:/Users/Tanguy/AppData/Roaming/NetBeans/8.2rc/apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Tanguy\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
