--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,8 +3,8 @@ file.reference.jandex-2.0.0.Final.jar=C:\\Users\\Tanguy\\Documents\\libs
 file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Tanguy\\Documents\\libs
 file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\Tanguy\\Documents\\libs
 j2ee.server.domain=C:/Users/Tanguy/AppData/Roaming/NetBeans/8.2rc/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Users/Tanguy/Documents/apache-tomcat-8.5.61
+j2ee.server.instance=tomcat80:home=C:\\Users\\Tanguy\\Documents\\apache-tomcat-8.5.61
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
